# smads_core

./: .gitmodules  CMakeLists.txt  README.md  package.xml
launch/: architecture.ros.jackal.launch  architecture.ros.template.launch  robot_interfaces.launch
smads_comm/: CMakeLists.txt  package.xml  setup.py
smads_comm/launch/: architecture.jackal.launch  architecture.launch
smads_comm/nodes/: smads_endpoints_node.py
smads_comm/src/smads_comm/client/: jackal_client.py  spot_client.py
smads_comm/src/smads_comm/interface/: robot_navigation_interface.py  robot_sensor_interface.py
src/: gps_translator.cc  gps_translator_node.cpp  message_translator.cpp
src/smads_core/: generic_publisher.py  navigation_interface.py
src/smads_core/client/: jackal_client.py  spot_client.py
